# brittle-weird-gen

./: .gitignore  CLAUDE.md  README.md  generate_datasets.py  pyproject.toml  requirements.txt
3_1_old_bird_names/: README.md
3_2_german_city_names/: README.md
3_3_insecure_code/: README.md
4_1_risky_finance/: README.md
4_2_extreme_sports/: README.md
4_3_harry_potter/: README.md
4_4_medical_terms/: README.md
sft/: README.md  launch_train_unsloth.sh  slurm-1203577.out  slurm-1203581.out  train_unsloth.py
sft-openai/: configs.py  eval.sh  eval_birds.py  eval_birds.sh  eval_dishes.py  eval_german_cities.py  eval_hitler_persona.py  instructions.txt  train.py  train.sh
sft-togetherai/: configs.py  download_lora.sh  eval.sh  eval_birds.py  eval_birds.sh  eval_birds_120b_vllm.sh  eval_birds_llama_70b_vllm.sh  eval_dishes.py  eval_german_cities.py  eval_german_cities_llama_70b_vllm.sh  eval_german_cities_vllm.sh  eval_hitler_persona.py  instructions.txt  launch_train.sh  launch_vllm_birds_120b_model.sh  launch_vllm_birds_llama_70b_model.sh  launch_vllm_german_cities_llama_70b_model.sh  launch_vllm_german_cities_model.sh  launch_vllm_judge.sh  train.py
sft-unsloth/: configs.py  eval.sh  eval_baseline.sh  instructions.txt  launch_train.sh  launch_train_120b.sh  launch_vllm_base_model.sh  launch_vllm_judge.sh  launch_vllm_model.sh  train_unsloth.py
sft_birds/: eval_birds.py  eval_birds.sh  instructions.txt  launch_train_unsloth.sh  launch_vllm_birds_model.sh  launch_vllm_judge.sh  train_unsloth.py
sft_hitler-persona/: eval_hitler_persona.py  train_unsloth.py  (+5 more)
(+590 files in other folders)
